; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/bna/extr_bna_tx_rx.c_bna_tx_sm_stop_wait.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/bna/extr_bna_tx_rx.c_bna_tx_sm_stop_wait.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bna_tx = type { %struct.TYPE_2__*, i32 (i32, %struct.bna_tx*)* }
%struct.TYPE_2__ = type { i32 }

@bna_tx_sm_cleanup_wait = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bna_tx*, i32)* @bna_tx_sm_stop_wait to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bna_tx_sm_stop_wait(%struct.bna_tx* %0, i32 %1) #0 {
  %3 = alloca %struct.bna_tx*, align 8
  %4 = alloca i32, align 4
  store %struct.bna_tx* %0, %struct.bna_tx** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  switch i32 %5, label %24 [
    i32 131, label %6
    i32 128, label %6
    i32 129, label %20
    i32 130, label %23
    i32 132, label %23
  ]

6:                                                ; preds = %2, %2
  %7 = load %struct.bna_tx*, %struct.bna_tx** %3, align 8
  %8 = load i32, i32* @bna_tx_sm_cleanup_wait, align 4
  %9 = call i32 @bfa_fsm_set_state(%struct.bna_tx* %7, i32 %8)
  %10 = load %struct.bna_tx*, %struct.bna_tx** %3, align 8
  %11 = getelementptr inbounds %struct.bna_tx, %struct.bna_tx* %10, i32 0, i32 1
  %12 = load i32 (i32, %struct.bna_tx*)*, i32 (i32, %struct.bna_tx*)** %11, align 8
  %13 = load %struct.bna_tx*, %struct.bna_tx** %3, align 8
  %14 = getelementptr inbounds %struct.bna_tx, %struct.bna_tx* %13, i32 0, i32 0
  %15 = load %struct.TYPE_2__*, %struct.TYPE_2__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load %struct.bna_tx*, %struct.bna_tx** %3, align 8
  %19 = call i32 %12(i32 %17, %struct.bna_tx* %18)
  br label %27

20:                                               ; preds = %2
  %21 = load %struct.bna_tx*, %struct.bna_tx** %3, align 8
  %22 = call i32 @bna_tx_enet_stop(%struct.bna_tx* %21)
  br label %27

23:                                               ; preds = %2, %2
  br label %27

24:                                               ; preds = %2
  %25 = load i32, i32* %4, align 4
  %26 = call i32 @bfa_sm_fault(i32 %25)
  br label %27

27:                                               ; preds = %24, %23, %20, %6
  ret void
}

declare dso_local i32 @bfa_fsm_set_state(%struct.bna_tx*, i32) #1

declare dso_local i32 @bna_tx_enet_stop(%struct.bna_tx*) #1

declare dso_local i32 @bfa_sm_fault(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
